idf_component_register(SRCS "src/main.c"
                            "src/MCP3421.c"
                            "include/MCP3421.h"
                            "src/CAT24C04.c"
                            "include/CAT24C04.h"
                            "include/console_dir.h"
                            "src/console_dir.c"
                            "src/BSP.c"
                            "include/BSP.h"
                            "src/GPIO_testboard.c"
                            "include/GPIO_testboard.h"
                            "src/application.c"
                            "include/application.h"
                            "src/MS1100.c"
                            "include/MS1100.h"
                            "src/Probe_EEPROM.c"
                            "include/Probe_EEPROM.h"
                            INCLUDE_DIRS ".")
