idf_component_register(SRCS "Firmware/main.c"
                            "BSP/MCP3421.c"
                            "BSP/MCP3421.h"
                            "BSP/CAT24C04.c"
                            "BSP/CAT24C04.h"
                            "Firmware/console_dir.h"
                            "Firmware/console_dir.c"
                            "BSP/BSP.c"
                            "BSP/BSP.h"
                            "BSP/GPIO_testboard.c"
                            "BSP/GPIO_testboard.h"
                            "Firmware/application.c"
                            "Firmware/application.h"
                            "BSP/MS1100.c"
                            "BSP/MS1100.h"
                            "Middleware/Probe_EEPROM.c"
                            "Middleware/Probe_EEPROM.h"
                            INCLUDE_DIRS ".")
